--- a/Darts/.classpath
+++ b/Darts/.classpath
@@ -2,5 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="lib" path="/home/piero/tecn/etc/xswingx_lib/looks-2.1.3.jar"/>
+	<classpathentry kind="lib" path="/home/piero/tecn/etc/xswingx_lib/prompt.jar" sourcepath="/home/piero/tecn/etc/xswingx_lib/prompt.jar"/>
+	<classpathentry kind="lib" path="/home/piero/tecn/etc/xswingx_lib/swingx.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
